Integrated Video to file rendering implementation in C library

--- a/example/Makefile
+++ b/example/Makefile
@@ -13,22 +13,25 @@ CC      := x86_64-w64-mingw32-gcc
 TESTOUT := cassietest.exe
 SIMOUT  := cassiesim.exe
 CTRLOUT := cassiectrl.exe
+VIDOUT := cassievideo.exe
 else
 CC      := gcc
 LDFLAGS += -Wl,-rpath,'$$ORIGIN'
 TESTOUT := cassietest
 SIMOUT  := cassiesim
 CTRLOUT := cassiectrl
+VIDOUT := cassievideo
 endif
 
 # Default target
-all: $(TESTOUT) $(SIMOUT) $(CTRLOUT)
+all: $(TESTOUT) $(SIMOUT) $(CTRLOUT) $(VIDOUT)
 
 # Normal targets
 clean:
 	rm -f $(TESTOUT)
 	rm -f $(SIMOUT)
 	rm -f $(CTRLOUT)
+	rm -f $(VIDOUT)
 
 $(TESTOUT): cassietest.c
 	$(CC) cassietest.c $(INC) $(CFLAGS) $(LDFLAGS) $(LIBS) -o $(TESTOUT)
@@ -38,6 +41,9 @@ $(SIMOUT): cassiesim.c
 
 $(CTRLOUT): cassiectrl.c
 	$(CC) cassiectrl.c $(INC) $(CFLAGS) $(LDFLAGS) $(LIBS) -o $(CTRLOUT)
+
+$(VIDOUT): cassievideo.c 
+	$(CC) cassievideo.c $(INC) $(CFLAGS) $(LDFLAGS) $(LIBS) -o $(VIDOUT)
 
 # Virtual targets
 .PHONY: all clean
