cleanup and add comments to header file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ mjpro150/
 */example/cassievideo
 */example/test_doublevis
 */example/cassietest
+*/example/test_doublevis
+*/example/test_hfield
+*/example/test_terrain
+*/example/vel_check
